# SoundTime

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/crates/soundtime-audio/: Cargo.toml
backend/crates/soundtime-audio/src/: convert.rs  lib.rs  metadata.rs  storage.rs  waveform.rs
backend/crates/soundtime-db/: Cargo.toml
backend/crates/soundtime-db/src/: lib.rs
backend/crates/soundtime-db/src/entities/: album.rs  artist.rs  blocked_domain.rs  favorite.rs  instance_setting.rs  library.rs  library_track.rs  listen_history.rs  mod.rs  p2p_peer.rs  playlist.rs  playlist_track.rs  plugin.rs  plugin_config.rs  plugin_events_log.rs  remote_track.rs  theme.rs  track.rs  track_embedding.rs  track_report.rs  user.rs  user_setting.rs  user_taste_vector.rs
backend/crates/soundtime-migration/: Cargo.toml
backend/crates/soundtime-migration/src/: lib.rs  m20240101_000001_create_users.rs  m20240101_000002_create_actors.rs  m20240101_000003_create_artists.rs  m20240101_000004_create_albums.rs  m20240101_000005_create_tracks.rs  m20240101_000006_create_libraries.rs  m20240101_000007_create_library_tracks.rs  m20240101_000008_create_playlists.rs  m20240101_000009_create_playlist_tracks.rs  m20240101_000010_create_follows.rs  m20240101_000011_create_activities.rs  m20240101_000012_create_deliveries.rs  m20240101_000013_create_listen_history.rs  m20240101_000014_create_favorites.rs  m20240101_000015_create_instance_settings.rs  m20240101_000016_create_remote_tracks.rs  m20240101_000017_add_uploaded_by_to_tracks.rs  m20240101_000018_add_setup_complete_setting.rs  m20240101_000019_add_ban_fields_to_users.rs  m20240101_000020_add_editorial_to_playlists.rs  m20240101_000021_create_track_reports.rs  m20240101_000022_remove_ap_add_p2p.rs  m20240101_000023_create_p2p_peers.rs  m20240101_000024_create_plugins.rs  m20240101_000025_create_themes.rs  m20240101_000026_fix_album_dedup.rs  m20240101_000027_create_user_settings.rs  m20240101_000028_normalize_genres.rs  m20240101_000029_add_radio_indexes.rs  m20240101_000030_add_behavioral_signals.rs  m20240101_000031_add_track_embeddings.rs  m20240101_000032_add_performance_indexes.rs  m20240101_000033_refresh_collation_version.rs
backend/crates/soundtime-p2p/: Cargo.toml
backend/crates/soundtime-p2p/src/: blob_cache.rs  blocked.rs  connection_pool.rs  discovery.rs  error.rs  lib.rs  library_sync.rs  musicbrainz.rs  node.rs  search_index.rs  track_health.rs
backend/crates/soundtime-plugin/: Cargo.toml
backend/crates/soundtime-plugin/src/: error.rs  events.rs  host_functions.rs  installer.rs  lib.rs  manifest.rs  registry.rs  sandbox.rs
backend/crates/soundtime-server/: Cargo.toml
backend/crates/soundtime-server/src/: embeddings.rs  listing_worker.rs  main.rs  metadata_lookup.rs  p2p_logs.rs  storage_worker.rs  trending.rs
backend/crates/soundtime-server/src/api/: admin.rs  albums.rs  artists.rs  audio.rs  editorial.rs  favorites.rs  history.rs  lastfm.rs  libraries.rs  lyrics.rs  mod.rs  p2p.rs  playlists.rs  plugins.rs  radio.rs  reports.rs  search.rs  setup.rs  stats.rs  themes.rs  tracks.rs  users.rs
backend/crates/soundtime-server/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  routes.rs
backend/crates/soundtime-server/tests/common/: mod.rs
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: ARCHITECTURE.md  SELF_HOSTING.md  api-reference.md  deployment.md  development.md  p2p-networking.md  plugin-development.md  themes.md
frontend/: .dockerignore  cypress.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: admin.cy.ts  auth.cy.ts  library.cy.ts  navigation.cy.ts  playback.cy.ts  playlists.cy.ts  settings.cy.ts  setup.cy.ts
frontend/cypress/support/: e2e.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.test.ts  api.ts  types.ts  utils.test.ts  utils.ts
frontend/src/lib/components/: AlbumCard.svelte  AlbumCard.test.ts  ArtistCard.svelte  ArtistCard.test.ts  AudioPlayer.svelte  AudioPlayer.test.ts  ExpandedPlayer.svelte  ExpandedPlayer.test.ts  FavoriteButton.svelte  FavoriteButton.test.ts  FederatedBadge.svelte  FederatedBadge.test.ts  GenreChip.svelte  GenreChip.test.ts  HeroBanner.svelte  HeroBanner.test.ts  MoodCard.svelte  MoodCard.test.ts  NetworkGraph.svelte  NetworkGraph.test.ts  PluginSlot.svelte  PluginSlot.test.ts  QuickPlayCard.svelte  QuickPlayCard.test.ts  SearchBar.svelte  SearchBar.test.ts  SectionCarousel.svelte  SectionCarousel.test.ts  SectionCarouselTest.svelte  SkeletonCard.svelte  StatCard.svelte  StatCard.test.ts  StatCardTest.svelte  TrackCard.svelte  TrackCard.test.ts  TrackList.svelte  TrackList.test.ts  UploadDropzone.svelte  UploadDropzone.test.ts  WaveformViewer.svelte  (+1 more)
frontend/src/lib/i18n/: index.svelte.test.ts  index.svelte.ts  translations.test.ts
frontend/src/lib/stores/: auth.svelte.test.ts  auth.svelte.ts  player.svelte.test.ts  player.svelte.ts  queue.svelte.test.ts  queue.svelte.ts  radio.svelte.test.ts  radio.svelte.ts  tasks.svelte.test.ts  tasks.svelte.ts  theme.svelte.test.ts  theme.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/albums/: +page.svelte
frontend/src/routes/artists/: +page.svelte
frontend/src/routes/explore/: +page.svelte
frontend/src/routes/favorites/: +page.svelte
frontend/src/routes/history/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/playlists/: +page.svelte
frontend/src/routes/radio/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/search/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/setup/: +layout.svelte  +page.svelte
frontend/src/tests/: setup.ts
(+15 files in other folders)
