[package]
name = "soundtime-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
log = "0.4"
soundtime-audio = { path = "../soundtime-audio" }

[dev-dependencies]
serde_json = "1"
