[package]
name = "soundtime-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { version = "0.32", features = ["discovery-local-network"] }
iroh-blobs = { version = "0.32", features = ["fs-store"] }
iroh-io = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "2"
bytes = "1"
rand = "0.8"
bloomfilter = "1"
siphasher = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"

soundtime-db = { path = "../soundtime-db" }
soundtime-audio = { path = "../soundtime-audio" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
