[package]
name = "soundtime-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
extism = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"
semver = "1"
url = "2"
wasmparser = "0.227"
tempfile = "3"

soundtime-db = { path = "../soundtime-db" }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
